--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node  ./bin/www",
-    "start:dev": "nodemon fileName.js"
+    "start:dev": "nodemon ./bin/www",
+    "heroku-postbuild": "ng build --prod"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
