--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
+    "bootstrap-autocomplete": "^2.3.7",
     "bootstrap4-jade": "^1.0.0-dev",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
