--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node  ./bin/www",
-    "start:dev": "nodemon ./bin/www",
-    "heroku-postbuild": "ng build --prod"
+    "start": "node  ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
