--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node  ./bin/www"
+    "start": "node  ./bin/www",
+    "start:dev": "nodemon ./bin/www",
+    "heroku-postbuild": "ng build --prod"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
     "bootstrap-autocomplete": "^2.3.7",
     "bootstrap4-jade": "^1.0.0-dev",
     "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
